kubernetes-networks/canary/canary-svc-headless.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: canary-svc
spec:
  selector:
    app: canary
  type: ClusterIP
  clusterIP: None
  ports:
    -
      protocol: TCP
      port: 80
      targetPort: 8000
